--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mapilary-apiclient-nodejs",
-  "version": "1.0.4",
+  "version": "2.0.1",
   "description": "",
   "scripts": {
     "test": "node test/runner.js test/spec/"
@@ -30,6 +30,7 @@
     "mocha": "^2.1.0",
     "mongodb": "~2.0",
     "sinon": "^1.11.1",
-    "sinon-chai": "^2.6.0"
+    "sinon-chai": "^2.6.0",
+    "node-redis-pubsub": "git://github.com/mapilary/node-redis-pubsub.git"
   }
 }
