--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mapilary-apiclient",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "description": "Mapilary API Client for nodejs",
   "scripts": {
     "test": "node test/runner.js test/spec/"
@@ -18,12 +18,12 @@
   },
   "license": "MAPILARY",
   "dependencies": {
-    "underscore": "^1.7.0",
     "bluebird": "~2.3.11",
     "btoa": "^1.1.2",
     "commander": "^2.5.0",
     "request": "~2.45.0",
-    "swagger-client-generator": "git://github.com/mauron85/swagger-client-generator.git"
+    "swagger-client-generator": "git://github.com/mauron85/swagger-client-generator.git",
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
